--- a/index.html
+++ b/index.html
@@ -26,25 +26,10 @@
           <input type="checkbox" id="includeNumbers">
           
           <label for="includeSymbols">Include Symbols</label>
-          <input type="checkbox" id="includeSymbols">  
+          <input type="checkbox" id="includeSymbols">
+          
+          <button type="submit">Generate Password</button>
         </form>
-      <div class="card">
-        <div class="card-header">
-          <h2>Generate a Password</h2>
-        </div>
-        <div class="card-body">
-          <textarea
-            readonly
-            id="password"
-            placeholder="Your Secure Password"
-            aria-label="Generated Password"
-          ></textarea>
-        </div>
-        <div class="card-footer">
-          <button id="generate" class="btn">Generate Password</button>
-        </div>
-      </div>
     </div>
-    <script src="script.js"></script>
   </body>
 </html>
