--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
   <body>
     <div class="container">
         <h1>Password Generator</h1>
-        <h3>password</h3>
-        <form>
+        <h3>Generate a Password</h3>
+        <form class="form>
           <label for="characterAmountNumber">Number Of Characters</label>
-          <input type="range" min="8" max="128" value="10" 
-          id="characterAmountRange">
-          <input type="number" min="8" max="128" value="10" 
-          id="characterAmountNumber">
+          <div>
+            <input type="range" min="8" max="128" value="10" 
+            id="characterAmountRange">
+            <input type="number" min="8" max="128" value="10" 
+            id="characterAmountNumber">
+          </div>
 
           <label for="includeUppercase">Include Uppercase</label>
           <input type="checkbox" id="includeUppercase">
