added html and css changes

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   </head>
   <body>
     <div class="container">
-        <h1>Password Generator</h1>
-        <h3>Generate a Password</h3>
+        <h1 class="title">Password Generator</h1>
+        <h3 class="password-display">Generate a Password</h3>
         <form class="form>
           <label for="characterAmountNumber">Number Of Characters</label>
-          <div>
+          <div class="character-amount-container">
             <input type="range" min="8" max="128" value="10" 
             id="characterAmountRange">
-            <input type="number" min="8" max="128" value="10" 
+            <input class="number-input" type="number" min="8" max="128" value="10" 
             id="characterAmountNumber">
           </div>
 
