--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <h1 class="title">Password Generator</h1>
         <h3 class="password-display">Generate a Password</h3>
-        <form class="form>
+        <form id="passwordGeneratorForm" class="form>
           <label for="characterAmountNumber">Number Of Characters</label>
           <div class="character-amount-container">
             <input type="range" min="8" max="128" value="10" 
