--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <script src="script.js" defer></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" >
     <title>PasswordGenerator</title>
   </head>
   <body>
     <div class="container">
         <h1 class="title">Password Generator</h1>
-        <h3 class="password-display">Generate a Password</h3>
+        <h3 class="password-display" id="passwordDisplay">Generate Password</h3>
         <form id="passwordGeneratorForm" class="form>
           <label for="characterAmountNumber">Number Of Characters</label>
           <div class="character-amount-container">
